--- a/templates/base/mainmenu.html
+++ b/templates/base/mainmenu.html
@@ -18,7 +18,7 @@
                                 <ul>
                                     <li><a href="{% url 'about_us' %}">About Hospitals</a></li>
                                     <li><a href="{% url 'doctors_list' %}">Meet Our Doctors</a></li>
-{#                                    <li><a href="faq.html">FAQ’s</a></li>#}
+                                   <li><a href="faq.html">FAQ’s</a></li>
 {#                                    <li><a href="testimonials.html">Testimonials</a></li>#}
                                     <li><a href="{% url 'gallery' %}">Our Gallery</a></li>
                                     <li><a href="{% url 'gallery_detail'  %}">Gallery Single</a></li>
@@ -64,6 +64,7 @@
                             <li class="dropdown"><a href="{% url 'register' %}">register</a>
                                 <ul>
                                     <li><a href="{% url 'login' %}">login</a></li>
+                                    <li><a href="">profile</a></li>
                                 </ul>
 
 
